--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <title>Andria Goodwin</title>
   </head>
   <body>
-    <form className="justify-content-center contactForm"
-        data-netlify="true"
+    <form class="justify-content-center contactForm"
         name="contact"
         method="post"
         netlify
