--- a/index.html
+++ b/index.html
@@ -7,26 +7,28 @@
     <title>Andria Goodwin</title>
   </head>
   <body>
-    <form class="justify-content-center contactForm"
+    
+    <div id="root">
+      <form class="justify-content-center contactForm"
         name="contact"
         method="post"
         netlify
         netlify-honeypot="bot-field"
         hidden
         >
-            <div className="mt-5" >
-                <input className="form-control" type="text" name="name"  defaultValue={name} onBlur={handleChange}/>
+            <div class="mt-5" >
+                <input class="form-control" type="text" name="name"/>
             </div>
-            <div className="mt-5" >
-                <input className="form-control" type="email"  name="email" defaultValue={email} onBlur={handleChange} />
+            <div class="mt-5" >
+                <input class="form-control" type="email"  name="email"/>
             </div>
-            <div className="mt-5" >
-                <textarea className="form-control" name="message" defaultValue={message} onBlur={handleChange} rows="7" />
+            <div class="mt-5" >
+                <textarea class="form-control" name="message" rows="7"></textarea>
             </div> 
 
             
         </form>
-    <div id="root"></div>
+    </div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
