form bug fix 10

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         netlify
         netlify-honeypot="bot-field"
         hidden
+        action="/pages/contact"
         >
             <div class="mt-5" >
                 <input class="form-control" type="text" name="name"/>
