form bug fix 11

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         netlify-honeypot="bot-field"
         hidden
         action="/pages/contact"
+        data-netlify="true"
         >
             <div class="mt-5" >
                 <input class="form-control" type="text" name="name"/>
