--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         netlify
         netlify-honeypot="bot-field"
         hidden
-        action="/contact"
+        action="/"
         data-netlify="true"
         >
             <div class="mt-5" >
